搜索功能更新